2007-07-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pygobject_functions)
	(pyg_timeout_add_seconds): Wrap g_timeout_add_seconds,
	conditionally compiled if glib version >= 2.13.5.

2007-07-08   Johannes Hölzl   <johannes.hoelzl@gmx.de>

	reviewed by: Gustavo Carneiro

	* gobject/gobjectmodule.c (build_gerror, init_gobject): Work
	around the deprecation warning of BaseException.message in Python
	2.6+ affecting GError exceptions.  Fixes #342948.

2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Post-release version bump.

=== 2.13.2 ===
2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

2007-07-07  Damien Carbery   <damien.carbery@sun.com>

	reviewed by: Gustavo Carneiro.

	* configure.ac: Bug 339924 – pygobject doesn't compile on opensolaris.

2007-04-30  Johannes Hölzl  <johannes.hoelzl@gmx.de>

	* gobject/gobjectmodule.c (init_gobjectmodule),
	* gobject/pygoptiongroup.c (arg_func),
	* gobject/option.py (OptionParser._parse_args, OptionGroup._to_goptiongroup),
	* tests/test_option.py: OptParse-Exceptions in GOption-callbacks
	are now convertet into an GError.  GError from the
	GOptionGroup.run is convertet into an OptParse-Exception.
	Fixes #342948.

2007-07-06  Ed Catmur  <ed@catmur.co.uk>

	* gobject/pygtype.c (pyg_param_gvalue_from_pyobject),
	(pyg_param_gvalue_as_pyobject): Applied patch from Ed Catmur to
	support G_TYPE_VALUE boxed args/signals, and add a test, Fixes
	#351072

2007-07-06  Carlos Martin  <inean@users.sf.net>

	* tests/test_gtype.py:
	* tests/testhelpermodule.c: add test for #351072

2007-07-04  Murray Cumming  <murrayc@murrayc.com>

	* gobject/pygobject.c: (pygobject_switch_to_toggle_ref):
	* gobject/pygobject.h: Rename the private struct field to 
	private_flags, because private is a C++ keyword, so this broke 
	builds of some C++ applications, such as Glom.

2007-07-02  Sebastian Granjoux  <seb.sfo@free.fr>

	reviewed by: Johan Dahlin
